# fast-load-experiments

./: LICENSE  README.md  pyproject.toml
src/: psycopg2_implementation.py  psycopg_implementation.py  utils.py  with_duckdb.py
